--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p>DEMO</p>
-  <iframe src="https://zona-iptv.ru/" name="iframe985426" width="800px" height="550px" scrolling="auto" frameborder="1" align="center"></iframe>
+  <iframe src="https://zona-iptv.ru/" name="iframe985426" width="100%" height="950px" scrolling="auto" frameborder="1" align="center"></iframe>
 </body>
 </html>
