--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>123</title>
+<title>Test</title>
 </head>
 <body>
-<p>456</p>
-  <img style="-webkit-user-select: none;cursor: zoom-out;" src="https://www.vladtime.ru/uploads/posts/2018-03/1522513386_ocean-sunset-sun-blue-water-bubbles_2560x1600.jpg" width="2560" height="1600">
+<p>Demo</p>
+<div style="text-align: center;margin: 0 auto;box-shadow: 0 0 10px 7px #0000003d;">
+  <img style="text-align: center;margin: 0 auto;" src="https://www.vladtime.ru/uploads/posts/2018-03/1522513386_ocean-sunset-sun-blue-water-bubbles_2560x1600.jpg" width="50%" height="auto"></div>
 </body>
 </html>
