--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css" />
+    <title>\\\\\\\///////</title>
     <style>
         #test-iframe {
             position: absolute;
@@ -29,9 +28,8 @@
         }
     </style>
 </head>
+    
 <body>
-<div id="qunit"></div>
-<div id="qunit-fixture"></div>
 <iframe id="test-iframe"></iframe>
 </body>
 </html>
