--- a/index.html
+++ b/index.html
@@ -1,35 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>\\\\\\\///////</title>
-    <style>
-        #test-iframe {
-            position: absolute;
-            overflow: auto;
-            right: 0;
-            bottom: 0;
-            top: auto;
-            left: auto;
-            width: 300px;
-            height: 300px;
-            border: 2px solid #00498f;
-            opacity: 0.2;
-        }
-        #test-iframe:hover {
-            opacity: 1;
-        }
-
-        #qunit {
-            position: relative;
-        }
-        #qunit:hover {
-            z-index: 9;
-        }
-    </style>
-</head>
-    
 <body>
-<iframe id="test-iframe"></iframe>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
