--- a/index.html
+++ b/index.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <style>
-    .container {
-      border: 1px solid black;
-      height: 200px;
-    }
 
-    .toggler {
-      height: 100%;
-      background: #EEE url(https://js.cx/height-percent/arrow_left.png) center center no-repeat;
-      border-right: #AAA 1px solid;
-      width: 30px;
-      float: left;
-      cursor: pointer;
-    }
-
-    .content {
-      margin-left: 35px;
-    }
-
-    p {
-      font-size: 80%;
-    }
-  </style>
 </head>
-
 <body>
-
-  <div class="container">
-    <div class="toggler"></div>
-    <div class="content">
-      <p>Ви́нни-Пу́х (англ. Winnie-the-Pooh) — плюшевый мишка, персонаж повестей и стихов Алана Александра Милна (цикл не имеет общего названия и обычно тоже называется «Винни-Пух», по первой книге). Один из самых известных героев детской литературы XX века.</p>
-
-      <p>В 1960-е—1970-е годы, благодаря пересказу Бориса Заходера «Винни-Пух и все-все-все», а затем и фильмам студии «Союзмультфильм», где мишку озвучивал Евгений Леонов, Винни-Пух стал очень популярен и в Советском Союзе.</p>
-    </div>
-  </div>
+<div class='titlewrapper'>
+<h1 class='title'>
+Serba Premium
+</h1>
+</div>
+<table>
+<tr><td><a href="http://45.140.93.240:999/status" target="_blank">45.140.93.240:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=45.140.93.240&port=999&id=12"></td></tr>
+<tr><td><a href="http://79.133.96.79:999/status" target="_blank">79.133.96.79:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=79.133.96.79&port=999&id=12"></td></tr>
+<tr><td><a href="http://79.133.108.162:999/status" target="_blank">79.133.108.162:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=79.133.108.162&port=999&id=12"></td></tr>
+<tr><td><a href="http://79.133.110.50:999/status" target="_blank">79.133.110.50:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=79.133.110.50&port=999&id=12"></td></tr>
+<tr><td><a href="http://79.133.125.213:999/status" target="_blank">79.133.125.213:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=79.133.125.213&port=999&id=12"></td></tr>
+<tr><td><a href="http://79.133.127.39:999/status" target="_blank">79.133.127.39:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=79.133.127.39&port=999&id=12"></td></tr>
+<tr><td><a href="http://94.125.53.18:999/status" target="_blank">94.125.53.18:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=94.125.53.18&port=999&id=12"></td></tr>
+<tr><td><a href="http://94.125.53.49:999/status" target="_blank">94.125.53.49:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=94.125.53.49&port=999&id=12"></td></tr>
+<tr><td><a href="http://94.125.55.105:999/status" target="_blank">94.125.55.105:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=94.125.55.105&port=999&id=12"></td></tr>
+<tr><td><a href="http://95.85.79.173:999/status" target="_blank">95.85.79.173:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=95.85.79.173&port=999&id=12"></td></tr>
+<tr><td><a href="http://95.181.233.37:999/status" target="_blank">95.181.233.37:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=95.181.233.37&port=999&id=12"></td></tr>
+<tr><td><a href="http://95.181.233.235:999/status" target="_blank">95.181.233.235:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=95.181.233.235&port=999&id=12"></td></tr>
+<tr><td><a href="http://95.181.235.46:999/status" target="_blank">95.181.235.46:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=95.181.235.46&port=999&id=12"></td></tr>
+<tr><td><a href="http://159.253.169.193:999/status" target="_blank">159.253.169.193:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=159.253.169.193&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.140.6:999/status" target="_blank">193.233.140.6:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.140.6&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.143.62:999/status" target="_blank">193.233.143.62:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.143.62&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.177.79:999/status" target="_blank">193.233.177.79:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.177.79&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.177.158:999/status" target="_blank">193.233.177.158:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.177.158&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.178.12:999/status" target="_blank">193.233.178.12:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.178.12&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.179.33:999/status" target="_blank">193.233.179.33:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.179.33&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.179.217:999/status" target="_blank">193.233.179.217:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.179.217&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.180.211:999/status" target="_blank">193.233.180.211:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.180.211&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.181.69:999/status" target="_blank">193.233.181.69:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.181.69&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.182.202:999/status" target="_blank">193.233.182.202:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.182.202&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.183.70:999/status" target="_blank">193.233.183.70:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.183.70&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.183.201:999/status" target="_blank">193.233.183.201:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.183.201&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.184.172:999/status" target="_blank">193.233.184.172:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.184.172&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.187.0:999/status" target="_blank">193.233.187.0:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.187.0&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.188.211:999/status" target="_blank">193.233.188.211:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.188.211&port=999&id=12"></td></tr>
+<tr><td><a href="http://193.233.189.17:999/status" target="_blank">193.233.189.17:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&ip=193.233.189.17&port=999&id=12"></td></tr>
+</table>
 
 </body>
-
 </html>
