--- a/index.html
+++ b/index.html
@@ -18,42 +18,17 @@ transition: all 0.2s;
 </head>
 <body>
 
-<table>
-<tbody>
-<tr style="background:#32997e;color:#fff;font-weight:600;"><td>Резервный IP</td><td>Статус</td></tr>
-  
-<tr><td><a href="http://45.140.93.240:999/status" target="_blank">45.140.93.240:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=45.140.93.240&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://79.133.96.79:999/status" target="_blank">79.133.96.79:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=79.133.96.79&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://79.133.108.162:999/status" target="_blank">79.133.108.162:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=79.133.108.162&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://79.133.110.50:999/status" target="_blank">79.133.110.50:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=79.133.110.50&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://79.133.125.213:999/status" target="_blank">79.133.125.213:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=79.133.125.213&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://79.133.127.39:999/status" target="_blank">79.133.127.39:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=79.133.127.39&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://94.125.53.18:999/status" target="_blank">94.125.53.18:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=94.125.53.18&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://94.125.53.49:999/status" target="_blank">94.125.53.49:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=94.125.53.49&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://94.125.55.105:999/status" target="_blank">94.125.55.105:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=94.125.55.105&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://95.85.79.173:999/status" target="_blank">95.85.79.173:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=95.85.79.173&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://95.181.233.37:999/status" target="_blank">95.181.233.37:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=95.181.233.37&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://95.181.233.235:999/status" target="_blank">95.181.233.235:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=95.181.233.235&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://95.181.235.46:999/status" target="_blank">95.181.235.46:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=95.181.235.46&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://159.253.169.193:999/status" target="_blank">159.253.169.193:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=159.253.169.193&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.140.6:999/status" target="_blank">193.233.140.6:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.140.6&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.143.62:999/status" target="_blank">193.233.143.62:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.143.62&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.177.79:999/status" target="_blank">193.233.177.79:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.177.79&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.177.158:999/status" target="_blank">193.233.177.158:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.177.158&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.178.12:999/status" target="_blank">193.233.178.12:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.178.12&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.179.33:999/status" target="_blank">193.233.179.33:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.179.33&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.179.217:999/status" target="_blank">193.233.179.217:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.179.217&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.180.211:999/status" target="_blank">193.233.180.211:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.180.211&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.181.69:999/status" target="_blank">193.233.181.69:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.181.69&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.182.202:999/status" target="_blank">193.233.182.202:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.182.202&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.183.70:999/status" target="_blank">193.233.183.70:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.183.70&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.183.201:999/status" target="_blank">193.233.183.201:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.183.201&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.184.172:999/status" target="_blank">193.233.184.172:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.184.172&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.187.0:999/status" target="_blank">193.233.187.0:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.187.0&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.188.211:999/status" target="_blank">193.233.188.211:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.188.211&amp;port=999&amp;id=12"></td></tr>
-<tr><td><a href="http://193.233.189.17:999/status" target="_blank">193.233.189.17:999</a></td><td><img src="//monitor.zone-game.info/check.php?do=status&amp;ip=193.233.189.17&amp;port=999&amp;id=12"></td></tr>
-  
-</tbody></table>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Block - Bottom -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1589818701349778"
+     data-ad-slot="4086588648"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 </body>
 </html>
